task(common):css 컴파일 오류 라인 수정

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,4 +1,4 @@
-@import '../font/pretendard/pretendard.css';
+@import '../../font/pretendard/pretendard.css';
 
 @font-face {
   font-family: 'NeoDunggeunmo';
