--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -1,9 +1,3 @@
-$default-gap: 5px;
-@mixin grid-layout($cols: 2, $gap: $default-gap) {
-  display: grid;
-  grid-template-columns: repeat($cols, 1fr);
-  grid-gap: $gap;
-}
 //------------------------------------------//
 // 풋터
 //------------------------------------------//
@@ -12,7 +6,7 @@ $default-gap: 5px;
   background: get-color(neutral, EerieBlack);
 
   .top_column {
-    @include flexLayout($ai: center, $gap: 0 20px);
+    @include flex($ai: center, $gap: 0 20px);
     margin-bottom: 20px;
     p {
       @include font(
@@ -23,7 +17,7 @@ $default-gap: 5px;
     }
   }
   .bott_column {
-    @include flexLayout($gap: 0 180px);
+    @include flex($gap: 0 180px);
     /* 좌측 컨텐츠 */
     .etc {
       @include size(100%, $maxWidth: 690px);
@@ -33,7 +27,7 @@ $default-gap: 5px;
         $color: get-color(blue, PaleCornflowerBlue)
       );
       .line {
-        @include flex-center($jc: space-between);
+        @include flexCenter($jc: space-between);
         margin-bottom: 50px;
 
         .deco {
@@ -43,10 +37,10 @@ $default-gap: 5px;
             background: get-color(blue, CelticBlue);
           }
           &-grid {
-            @include grid-layout;
+            @include gridLayout;
           }
           &-center {
-            @include flex-center;
+            @include flexCenter;
           }
           &-circle {
             span {
@@ -130,7 +124,7 @@ $default-gap: 5px;
     }
     /* 우측 컨텐츠 - 링크 이동 영역 */
     .main_section_link {
-      @include flexLayout($ff: column, $jc: space-between);
+      @include flex($ff: column, $jc: space-between);
       li {
         a {
           @include font(
@@ -147,7 +141,7 @@ $default-gap: 5px;
         }
 
         &.email {
-          @include flexLayout($ai: center, $gap: 0 10px);
+          @include flex($ai: center, $gap: 0 10px);
           a {
             color: get-color(neutral, White);
           }
